--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
 RewriteEngine On
-RewriteRule ^([A-Z][A-Za-z0-9]*)$ index.php?in=$1
-[s=1]
+RewriteRule ^([A-Z][A-Za-z0-9]*)$ index.php?in=$1 [S=1]
 RewriteRule ^([a-z].*)$ /Resources/Site/Code/$1
