--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-RewriteEngine On
-RewriteRule ^([A-Z][A-Za-z0-9]*)\.php$ index.php?in=$1 
+RewriteEngine On 
 RewriteRule ^([a-z].*)$ /Resources/Site/Code/$1
+RewriteRule ^([A-Z][A-Za-z0-9]*)$ index.php?in=$1
