--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On 
-RewriteRule ^([a-z].*)$ /Resources/Site/Code/$1
+#RewriteRule ^([a-z].*)$ /Resources/Site/Code/$1
 RewriteRule ^([A-Z].*)$ index.php?in=$1
