Rev OMG i don't even care

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,13 @@
 RewriteEngine On 
-RewriteRule ^([A-Z][A-Za-z0-9]*)$ index.php?in=$1 [L]
-RewriteRule ^([a-z].*)$ /Resources/Site/Code/$2 [L]
+SetEnvIf Host ^([A-Z][A-Za-z0-9]*). HOST_ABC
+SetEnvIf Host ^([a-z].*). HOST_DEF
+
+<IfDefine HOST_ABC>
+    RewriteRule ^([A-Z][A-Za-z0-9]*)$ index.php?in=$1 [L]
+</IfDefine>
+<IfDefine HOST_DEF>
+    RewriteRule ^([a-z].*)$ /Resources/Site/Code/$2 [L]
+</IfDefine>
+
+
 #RewriteRule ^/$ /Resources/Site/Code
