--- a/web.config
+++ b/web.config
@@ -4,7 +4,7 @@
         <rewrite>
             <rules>
                 <clear />
-                <rule name="HTTP to HTTPS redirect" enabled="false" stopProcessing="true">
+                <rule name="HTTP to HTTPS redirect" enabled="true" stopProcessing="true">
                     <match url="(.*)" />
                     <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
                         <add input="{HTTPS}" pattern="off" ignoreCase="true" />
