Updated login system

--- a/web.config
+++ b/web.config
@@ -24,5 +24,6 @@
                 </rule>
             </rules>
         </rewrite>
+        <httpErrors errorMode="DetailedLocalOnly" />
     </system.webServer>
 </configuration>
